# serverless-crud-API

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: notes-rest-api-v1-oas30.json
src/: app.py  db.py  delete_handler.py  get_handler.py  patch_handler.py  post_handler.py  response.py
src/handlers/: post_handler.py  response.py
tests/: conftest.py  test_delete.py  test_get.py  test_patch.py  test_post.py  test_validation.py
